[gd_scene load_steps=2 format=3 uid="uid://brm8ox0tyqoa"]

[ext_resource type="Script" uid="uid://ch84ec1tq0ng0" path="res://scenes/xp_orb.gd" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 40.0

[node name="XPOrb" type="Area2D"]
collision_layer = 8
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="GlowParticles" type="CPUParticles2D" parent="."]
amount = 20
lifetime = 0.8
preprocess = 0.5
local_coords = true
emission_shape = 1
emission_sphere_radius = 6.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 30.0
damping_min = 20.0
damping_max = 40.0
scale_amount_min = 3.0
scale_amount_max = 6.0
color = Color(0.4, 0.9, 1, 0.8)

[node name="CoreParticles" type="CPUParticles2D" parent="."]
amount = 8
lifetime = 0.5
preprocess = 0.5
local_coords = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
damping_min = 30.0
damping_max = 50.0
scale_amount_min = 4.0
scale_amount_max = 7.0
color = Color(0.8, 1, 1, 1)

[node name="CollectParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 150)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 3.0
scale_amount_max = 6.0
color = Color(0.4, 0.9, 1, 1)
